[package]
name = "taxonomy"
version = "0.8.0"
authors = ["Vincent Prouillet <vincent.prouillet@invitae.com>"]
description = "Routines for loading, saving, and manipulating taxonomic trees"
keywords = ["taxonomy", "bioinformatics"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/onecodex/taxonomy"
license = "MIT"
readme = "./README.md"
edition = "2021"

[dependencies]
memchr = "2.2.1"
pyo3 = { version = "0.16", optional = true }
quick-xml = "0.22"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"

[features]
python = ["pyo3/extension-module"]
python_test = ["pyo3", "pyo3/auto-initialize"]

[lib]
crate-type=["cdylib", "rlib"]
bench = false

[dev-dependencies]
rand = "0.8"
tempfile = "3.3"

[package.metadata.maturin]
classifier = ["Intended Audience :: Science/Research", "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Topic :: Scientific/Engineering :: Bio-Informatics"]
